init demo